# wasmer-plugins

./: Cargo.toml  Justfile  README.org
.cargo/: config.toml
examples/host-func-abi/: Cargo.toml
examples/host-func-abi/src/: lib.rs
examples/host-func-plugin/: Cargo.toml
examples/host-func-plugin/src/: lib.rs
examples/host-func-runner/: Cargo.toml
examples/host-func-runner/src/: main.rs
examples/simple-abi/: Cargo.toml
examples/simple-plugin/: Cargo.toml
examples/simple-plugin/src/: lib.rs
examples/simple-runner/: Cargo.toml
examples/simple-runner/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/tests/: abi.rs
services/helpers/: Cargo.toml
services/helpers-macros/: Cargo.toml
services/helpers-macros/src/: lib.rs  macro_helpers.rs  struct_helpers.rs
services/helpers/src/: converters.rs  lib.rs
services/wasmer-helpers/: Cargo.toml
services/wasmer-helpers-macros/: Cargo.toml
services/wasmer-helpers-macros/src/: complex_types.rs  lib.rs  standard_types.rs
services/wasmer-helpers/src/: complex_types.rs  lib.rs  standard_types.rs
