[workspace]
members = ["lib", "services/*", "examples/*"]
resolver = "2"                                # yes, as a string

[profile.release]
debug = 1
incremental = false
lto = true
# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1
# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3
